# pytorch-compatibility

./: .gitignore  config.internal.example.yaml  config.yaml  generate.py  package-lock.json  package.json  pyproject.toml  readme.md  test_html.mjs  test_torch_compat.py
data/: COMPATIBILITY.md  compatibility_matrix.csv  compatibility_table.json
docs/: index.html
torch_compat/: __init__.py  arch_lists.py  config.py  gpus.py  html.py  sources.py  table.py  wheels.py
